--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -34,7 +34,7 @@ nav a {
 
 nav a:hover {
   /* font-weight: 600; */
-  text-shadow: 0 0 2.5px grey;
+  text-shadow: 0 0 2.5px darkgrey;
 }
 
 @media screen and (max-width: 1100px) {
@@ -46,6 +46,10 @@ nav a:hover {
   nav a {
     font-size: 2.441rem;
   }
+
+  nav a:hover {
+  text-shadow: none;
+}
 }
 
 @media screen and (max-width: 708px) {
