--- a/src/styles/fontawesome.css
+++ b/src/styles/fontawesome.css
@@ -6090,12 +6090,12 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url("../../public/fonts/fa-brands-400.eot");
-  src: url("../../public/fonts/fa-brands-400.eot?#iefix") format("embedded-opentype"),
-    url("../../public/fonts/fa-brands-400.woff2") format("woff2"),
-    url("../../public/fonts/fa-brands-400.woff") format("woff"),
-    url("../../public/fonts/fa-brands-400.ttf") format("truetype"),
-    url("../../public/fonts/fa-brands-400.svg#fontawesome") format("svg");
+  src: url("/fonts/fa-brands-400.eot");
+  src: url("/fonts/fa-brands-400.eot?#iefix") format("embedded-opentype"),
+    url("/fonts/fa-brands-400.woff2") format("woff2"),
+    url("/fonts/fa-brands-400.woff") format("woff"),
+    url("/fonts/fa-brands-400.ttf") format("truetype"),
+    url("/fonts/fa-brands-400.svg#fontawesome") format("svg");
 }
 
 .fab {
@@ -6107,12 +6107,12 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 400;
   font-display: block;
-  src: url("../../public/fonts/fa-regular-400.eot");
-  src: url("../../public/fonts/fa-regular-400.eot?#iefix") format("embedded-opentype"),
-    url("../../public/fonts/fa-regular-400.woff2") format("woff2"),
-    url("../../public/fonts/fa-regular-400.woff") format("woff"),
-    url("../../public/fonts/fa-regular-400.ttf") format("truetype"),
-    url("../../public/fonts/fa-regular-400.svg#fontawesome") format("svg");
+  src: url("/fonts/fa-regular-400.eot");
+  src: url("/fonts/fa-regular-400.eot?#iefix") format("embedded-opentype"),
+    url("/fonts/fa-regular-400.woff2") format("woff2"),
+    url("/fonts/fa-regular-400.woff") format("woff"),
+    url("/fonts/fa-regular-400.ttf") format("truetype"),
+    url("/fonts/fa-regular-400.svg#fontawesome") format("svg");
 }
 
 .far {
@@ -6124,12 +6124,12 @@ readers do not read off random characters that represent icons */
   font-style: normal;
   font-weight: 900;
   font-display: block;
-  src: url("../../public/fonts/fa-solid-900.eot");
-  src: url("../../public/fonts/fa-solid-900.eot?#iefix") format("embedded-opentype"),
-    url("../../public/fonts/fa-solid-900.woff2") format("woff2"),
-    url("../../public/fonts/fa-solid-900.woff") format("woff"),
-    url("../../public/fonts/fa-solid-900.ttf") format("truetype"),
-    url("../../public/fonts/fa-solid-900.svg#fontawesome") format("svg");
+  src: url("/fonts/fa-solid-900.eot");
+  src: url("/fonts/fa-solid-900.eot?#iefix") format("embedded-opentype"),
+    url("/fonts/fa-solid-900.woff2") format("woff2"),
+    url("/fonts/fa-solid-900.woff") format("woff"),
+    url("/fonts/fa-solid-900.ttf") format("truetype"),
+    url("/fonts/fa-solid-900.svg#fontawesome") format("svg");
 }
 
 .fa,
