--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -7,7 +7,8 @@ const { href } = Astro.props
 .button {
   background-color: #a22066;
   
-  border-radius: 100vh;
+  border-radius: 10px;
+  white-space: nowrap;
   color: white;
   padding: .3em .6em;
   font-size: .8em;
