--- a/src/components/Wordmark.astro
+++ b/src/components/Wordmark.astro
@@ -29,7 +29,7 @@
 
 <div class="wordmark">
   <a href="/">
-    Clara Schumann Orchester<br />
+    Clara-Schumann-Orchester<br />
     Frankfurt a.M.
   </a>
 </div>
