--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,12 +17,11 @@ import ImageRight from '../components/ImageRight.astro'
 
 <IndexLayout>
   <div class="lead">
-    <p>Das CSO spielt Clara Schumann: Konzerte am 19. und 20. 
-    März in Frankfurt bei freiem Eintritt.<br/>
-    <Button href="konzerte">Mehr zu den Konzerten erfahren</Button></p>
+    <p>Am 13. November spielen wir Schostakowitsch bei freiem Eintritt in Frankfurt<br/>
+    <Button href="konzerte">Mehr zum Konzert erfahren</Button></p>
   </div>
   <ImageLeft src="images/image003.jpg" alt="">
-    Das Clara Schumann Orchester spielt unter der Leitung von Lukas Rommelspacher.
+    Das Clara-Schumann-Orchester spielt unter der Leitung von Lukas Rommelspacher.
     Seit 2020 treffen hier engagierte Musiker_innen aufeinander und erarbeiten
     Sinfoniekonzerte.<br/><Button href="/orchester">Mehr zum Orchester erfahren</Button>
   </ImageLeft>
