ImageLeft and ImageRight: Images now have max-height

--- a/src/components/ImageRight.astro
+++ b/src/components/ImageRight.astro
@@ -7,6 +7,7 @@ const image = Astro.props;
 .image {
   border-radius: 10px;
   box-shadow: 0 0 5px 2px lightgrey;
+  max-height: 650px;
 }
 
 .wrapper {
@@ -18,7 +19,7 @@ const image = Astro.props;
   display: block;
   margin: auto;
   width: fit-content;
-
+  
 }
 
 .text {
