--- a/src/components/ImageLeft.astro
+++ b/src/components/ImageLeft.astro
@@ -7,6 +7,7 @@ const image = Astro.props;
 .image {
   border-radius: 10px;
   box-shadow: 0 0 5px 2px lightgrey;
+  max-height: 650px;
 }
 
 .wrapper {
