trailing slashes ftw

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,11 +18,11 @@ import ImageRight from '../components/ImageRight.astro'
 <IndexLayout>
   <div class="lead">
     <p>Am 13. November spielen wir Schostakowitsch bei freiem Eintritt in Frankfurt<br/>
-    <Button href="konzerte">Mehr zum Konzert erfahren</Button></p>
+    <Button href="konzerte/">Mehr zum Konzert erfahren</Button></p>
   </div>
   <ImageLeft src="/images/image003_650.jpg" alt="Das spielt CSO auf der Bühne des Großen Saals der HfMDK Frankfurt">
     Das Clara-Schumann-Orchester spielt unter der Leitung von Lukas Rommelspacher.
     Seit 2020 treffen hier engagierte Musiker_innen aufeinander und erarbeiten
-    Sinfoniekonzerte.<br/><Button href="/orchester">Mehr zum Orchester erfahren</Button>
+    Sinfoniekonzerte.<br/><Button href="orchester/">Mehr zum Orchester erfahren</Button>
   </ImageLeft>
 </IndexLayout>
