--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -86,6 +86,6 @@ nav a:hover {
     <li><a class="navlink-socialmedia" target="_blank" aria-label="Instagram" href="https://www.instagram.com/claraschumannorchester/"><i class="fab fa-instagram"></i></a>
     <a class="navlink-socialmedia" target="_blank" aria-label="Facebook" href="https://www.facebook.com/Clara-Schumann-Orchester-Frankfurt-100707598086412/"><i
           class="fab fa-facebook"></i></a></li>
-    <li><a href="/konzerte">Unsere Konzerte</i></a></li>
-    <li><a href="/orchester">Das Orchester</i></a></li>
+    <li><a href="/konzerte/">Unsere Konzerte</a></li>
+    <li><a href="/orchester/">Das Orchester</a></li>
 </nav>
