code cleanup fixes

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,7 @@ import Meta from '../components/Meta.astro'
 import Grid from '../components/Grid.astro'
 
 import ContentArea from '../components/ContentArea.astro'
-import Footer from '../components/Footer.astro'
+// import Footer from '../components/Footer.astro'
 import Logo from '../components/Logo.astro'
 import Navbar from '../components/Navbar.astro'
 import Wordmark from '../components/Wordmark.astro'
@@ -17,7 +17,7 @@ import Wordmark from '../components/Wordmark.astro'
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
-	<style global>
+	<style is:global>
 		@import "../styles/style.css";
 		@import "../styles/fontawesome.css";
 	</style>
