seo titles & new layout

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,7 +21,7 @@ import Wordmark from '../components/Wordmark.astro'
 		@import "../styles/style.css";
 		@import "../styles/fontawesome.css";
 	</style>
-	<title>Clara-Schumann-Orchester Frankfurt am Main</title>
+	<title>{Astro.props.title} | Clara-Schumann-Orchester Frankfurt am Main</title>
 </head>
 <body>
 	<Grid>
