--- a/src/pages/konzerte/index.astro
+++ b/src/pages/konzerte/index.astro
@@ -4,7 +4,7 @@ import IndexLayout from "../../layouts/IndexLayout.astro";
 import ImageRight from "../../components/ImageRight.astro";
 ---
 
-<IndexLayout>
+<IndexLayout title="Konzerte">
   <ImageRight src="/images/flyer_konzert_nov22_650.png" alt="Flyer für das Konzert am 13. November 2022">
     <h2>Nächstes Konzert</h2>
     <p>Sonntag, <b>13.11.2022</b>, 17:00 Uhr<br /></p>
