--- a/src/layouts/IndexLayout.astro
+++ b/src/layouts/IndexLayout.astro
@@ -2,6 +2,6 @@
 import BaseLayout from './BaseLayout.astro'
 ---
 
-	<BaseLayout>
+	<BaseLayout title={Astro.props.title}>
 		<slot />
 	</BaseLayout>
