--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,12 +15,12 @@ import ImageRight from '../components/ImageRight.astro'
 
 </style>
 
-<IndexLayout>
+<IndexLayout title="CSO">
   <div class="lead">
     <p>Am 13. November spielen wir Schostakowitsch bei freiem Eintritt in Frankfurt<br/>
     <Button href="konzerte/">Mehr zum Konzert erfahren</Button></p>
   </div>
-  <ImageLeft src="/images/image003_650.jpg" alt="Das spielt CSO auf der Bühne des Großen Saals der HfMDK Frankfurt">
+  <ImageLeft src="/images/image003_650.jpg" alt="Das  CSO spielt auf der Bühne des Großen Saals der HfMDK Frankfurt">
     Das Clara-Schumann-Orchester spielt unter der Leitung von Lukas Rommelspacher.
     Seit 2020 treffen hier engagierte Musiker_innen aufeinander und erarbeiten
     Sinfoniekonzerte.<br/><Button href="orchester/">Mehr zum Orchester erfahren</Button>
