breakout concert components & connect to cms

--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -1,17 +1,17 @@
-<style>
-div {
-  display: grid;
-  grid-template-columns: calc(var(--logo-height) * 1.5) auto;
-}
-
-@media screen and (max-width: 708px) {
-  div > * {
-    margin-top: 20px;
-  }
-}
-
-</style>
-
-<div>
+<div class="grid-container">
   <slot />
 </div>
+
+<style>
+  .grid-container {
+    display: grid;
+    grid-template-columns: calc(var(--logo-height) * 1.5) auto;
+  }
+  
+  @media screen and (max-width: 708px) {
+    .grid-container > * {
+      margin-top: 20px;
+    }
+  }
+  
+  </style>
