--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
-import IndexLayout from "../layouts/IndexLayout.astro";
+import IndexLayout from '@layouts/IndexLayout.astro'
 
-import Button from "../components/Button.astro";
-import ImageLeft from "../components/ImageLeft.astro";
-import ImageRight from "../components/ImageRight.astro";
+import Button from "@components/Button.astro";
+import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 ---
 
 <style lang="scss">
@@ -18,17 +17,18 @@ import ImageRight from "../components/ImageRight.astro";
 		<p>
 			<em>CSO meets Eliot-Quartett</em> am 4. und 5. März bei freiem Eintritt in
 			Frankfurt<br />
-			<Button href="konzerte/">Mehr zum Konzert erfahren</Button>
+			<Button href="/konzerte">Mehr zum Konzert erfahren</Button>
 		</p>
 	</div>
-	<ImageLeft
+	<ImageAndTextColumns
 		src="/images/image003_650.jpg"
 		alt="Das  CSO spielt auf der Bühne des Großen Saals der HfMDK Frankfurt"
+		imageSide="left"
 	>
 		Das Clara-Schumann-Orchester spielt unter der Leitung von Lukas
 		Rommelspacher. Seit 2020 treffen hier engagierte Musiker_innen aufeinander
-		und erarbeiten Sinfoniekonzerte.<br /><Button href="orchester/"
+		und erarbeiten Sinfoniekonzerte.<br /><Button href="/orchester"
 			>Mehr zum Orchester erfahren</Button
 		>
-	</ImageLeft>
+	</ImageAndTextColumns>
 </IndexLayout>
