css mini-cleanup

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,9 +26,8 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 	</ImageAndTextColumns>
 </IndexLayout>
 
-<style lang="scss">
+<style>
 	.lead {
 		font-size: 1.563rem;
-		padding-bottom: 1em;
 	}
 </style>
