--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import IndexLayout from '@layouts/IndexLayout.astro'
+import IndexLayout from "@layouts/IndexLayout.astro";
 
 import Button from "@components/Button.astro";
 import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
@@ -15,14 +15,14 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 	</div>
 	<ImageAndTextColumns
 		src="/images/image003_650.jpg"
-		alt="Das  CSO spielt auf der Bühne des Großen Saals der HfMDK Frankfurt"
+		alt="Das CSO spielt auf der Bühne des Großen Saals der HfMDK Frankfurt"
 		imageSide="left"
 	>
 		Das Clara-Schumann-Orchester spielt unter der Leitung von Lukas
 		Rommelspacher. Seit 2020 treffen hier engagierte Musiker_innen aufeinander
-		und erarbeiten Sinfoniekonzerte.<br /><Button href="/orchester"
-			>Mehr zum Orchester erfahren</Button
-		>
+		und erarbeiten Sinfoniekonzerte.<br /><Button href="/orchester">
+			Mehr zum Orchester erfahren
+		</Button>
 	</ImageAndTextColumns>
 </IndexLayout>
 
