homepage lead media query

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,6 +28,12 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 
 <style>
 	.lead {
-		font-size: 1.563rem;
+		font-size: 1.5rem;
+	}
+
+	@media screen and (max-width: 708px) {
+		.lead {
+			font-size: 1.25rem;
+		}
 	}
 </style>
