new teaser on start

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>CSO meets Eliot-Quartett</em> am 4. und 5. März bei freiem Eintritt in
+			<em>Bahnhofsviertel Classics</em>: Vivaldi und Britten am 9. Juli bei freiem Eintritt in
 			Frankfurt<br />
 			<Button href="/konzerte">Mehr zum Konzert erfahren</Button>
 		</p>
