front page teaser schöpfung

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,10 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>Bahnhofsviertel Classics</em>: Vivaldi und Britten am 9. Juli bei freiem Eintritt in
-			Frankfurt<br />
-			<Button href="/konzerte">Mehr zum Konzert erfahren</Button>
+			<em>SCHÖPFUNG</em>: Musiktheater im Studio Naxos — 20.-22. Oktober<br />
+			<Button href="https://studionaxos.de/de/produktionen/schoepfung">
+				Mehr zum Projekt erfahren
+			</Button>
 		</p>
 	</div>
 	<ImageAndTextColumns
