neue seiten dirigent und mitspielen

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,8 +3,10 @@
 		<li><a class="navlink-socialmedia" target="_blank" aria-label="Instagram" href="https://www.instagram.com/claraschumannorchester/"><i class="fab fa-instagram"></i></a>
 		<a class="navlink-socialmedia" target="_blank" aria-label="Facebook" href="https://www.facebook.com/Clara-Schumann-Orchester-Frankfurt-100707598086412/"><i
 					class="fab fa-facebook"></i></a></li>
-		<li><a href="/konzerte">Unsere Konzerte</a></li>
-		<li><a href="/orchester">Das Orchester</a></li>
+		<li><a href="/konzerte">Konzerte</a></li>
+		<li><a href="/orchester">Über uns</a></li>
+		<li><a href="/leitung">Leitung</a></li>
+		<li><a href="/mitspielen">Mitspielen</a></li>
 	</ul>
 </nav>
 
