--- a/src/layouts/InfoLayout.astro
+++ b/src/layouts/InfoLayout.astro
@@ -2,6 +2,6 @@
 import BaseLayout from './BaseLayout.astro'
 ---
 
-	<BaseLayout title="Wer wir sind">
+	<BaseLayout title="Infos">
 		<slot />
 	</BaseLayout>
