--- a/src/components/ContentArea.astro
+++ b/src/components/ContentArea.astro
@@ -32,35 +32,30 @@
 .content :global(h1) {
   font-weight: 400;
   margin: 0 0 1.38rem;
-  margin-top: 0;
   font-size: 3.052rem;
   line-height: 1.3;
 }
 .content :global(h2) {
   font-weight: 400;
   margin: 0 0 1.38rem;
-  margin-top: 0;
   font-size: 2.441rem;
   line-height: 1.3;
 }
 .content :global(h3) {
   font-weight: 400;
-  margin: 0 0 1.38rem;
-  margin-top: 0;
+  margin: 1.2rem 0 1.38rem;
   font-size: 1.953rem;
   line-height: 1.3;
 }
 .content :global(h4) {
   font-weight: 400;
   margin: 0 0 1.38rem;
-  margin-top: 0;
   font-size: 1.563rem;
   line-height: 1.3;
 }
 .content :global(h5) {
   font-weight: 400;
   margin: 0 0 1.38rem;
-  margin-top: 0;
   font-size: 1.25rem;
   line-height: 1.3;
 }
