details und teaser projekt 8

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>SCHÖPFUNG</em>: Musiktheater im Studio Naxos — 20.-22. Oktober<br />
+			<em>Das CSO im Konzert</em>: Mussorgsky, Mahler und Strauss am 2. und 3. März in Frankfurt<br />
 			<Button href="https://studionaxos.de/de/produktionen/schoepfung">
-				Mehr zum Projekt erfahren
+				Mehr zu den Konzerten erfahren
 			</Button>
 		</p>
 	</div>
