fix teaser link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 	<div class="lead">
 		<p>
 			<em>Das CSO im Konzert</em>: Mussorgsky, Mahler und Strauss am 2. und 3. März in Frankfurt<br />
-			<Button href="https://studionaxos.de/de/produktionen/schoepfung">
+			<Button href="/konzerte">
 				Mehr zu den Konzerten erfahren
 			</Button>
 		</p>
