--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>Das CSO im Konzert</em>: Mussorgsky, Mahler und Strauss am 2. und 3. März in Frankfurt<br />
+			<em>Das CSO im Konzert</em>: Bruckner und Schumann am 8. und 9. Juni in Frankfurt<br />
 			<Button href="/konzerte">
 				Mehr zu den Konzerten erfahren
 			</Button>
