--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,9 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>Das CSO im Konzert</em>: Bruckner und Schumann am 8. und 9. Juni in Frankfurt<br />
-			<Button href="/konzerte">
-				Mehr zu den Konzerten erfahren
-			</Button>
+			<em>Das CSO zu Gast in Musikhochschule und Konservatorium</em>: Senfter
+			und Dvořák am 28. und 29. September in Frankfurt<br />
+			<Button href="/konzerte"> Mehr zu den Konzerten erfahren </Button>
 		</p>
 	</div>
 	<ImageAndTextColumns
