--- a/src/components/ImageAndTextColumns.astro
+++ b/src/components/ImageAndTextColumns.astro
@@ -44,6 +44,7 @@ export interface Props {
 		gap: 1rem;
 		align-items: center;
 		margin-top: 2rem;
+		margin-bottom: 2rem;
 	}
 
 	.image-wrapper {
