--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,21 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>Das CSO zu Gast in Musikhochschule und Konservatorium</em>: Senfter
-			und Dvořák am 28. und 29. September in Frankfurt<br />
+			<em>Das CSO zu Gast in Frankfurter Musikhochschule und Konservatorium</em
+			>: Johanna Senfter und Antonín Dvořák am 28. und 29. September (<em
+				>Pay as you wish</em
+			>)<br />
+			<Button
+				href="https://www.hr2.de/programm/musikland-hessen/musikland-hessen,epg-musikland-hessen-582.html"
+				color="grey"
+			>
+				Zur Ankündigung auf hr2
+			</Button>
 			<Button href="/konzerte"> Mehr zu den Konzerten erfahren </Button>
 		</p>
 	</div>
 	<ImageAndTextColumns
-		src="/images/image003_650.jpg"
+		src="/images/DSC_4931.png"
 		alt="Das CSO spielt auf der Bühne des Großen Saals der HfMDK Frankfurt"
 		imageSide="left"
 	>
@@ -28,7 +36,7 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 
 <style>
 	.lead {
-		font-size: 1.5rem;
+		font-size: 1.35rem;
 	}
 
 	@media screen and (max-width: 708px) {
