--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,8 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>Das CSO zu Gast in Frankfurter Musikhochschule und Konservatorium</em
-			>: Johanna Senfter und Antonín Dvořák am 28. und 29. September (<em
-				>Pay as you wish</em
-			>)<br />
+			<em>Das CSO zu Gast in Dr. Hoch's Konservatorium</em>: Wagner, Say und
+			Rimski-Korsakow am 15. und 17. November (<em>Pay as you wish</em>)<br />
 			<Button
 				href="https://www.hr2.de/programm/musikland-hessen/musikland-hessen,epg-musikland-hessen-582.html"
 				color="grey"
