--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>Das CSO zu Gast in Dr. Hoch's Konservatorium</em>: Wagner, Say und
-			Rimski-Korsakow am 15. und 17. November (<em>Pay as you wish</em>)<br />
+			<em>Das Clara-Schumann-Orchester wird 5 Jahre alt</em>: Jubiläumskonzerte
+			am 1. und 2. März in Frankfurt (<em>Pay as you wish</em>)<br />
 			<Button href="/konzerte"> Mehr zu den Konzerten erfahren </Button>
 		</p>
 	</div>
