--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,8 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 	<div class="lead">
 		<p>
 			<em>Das Clara-Schumann-Orchester wird 5 Jahre alt</em>: Jubiläumskonzerte
-			am 1. und 2. März in Frankfurt (<em>Pay as you wish</em>)<br />
+			mit Werken von Clara Schumann, Schubert und Beethoven am 1. und 2. März in
+			Frankfurt (<em>Pay as you wish</em>)<br />
 			<Button href="/konzerte"> Mehr zu den Konzerten erfahren </Button>
 		</p>
 	</div>
