--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>Das Clara-Schumann-Orchester wird 5 Jahre alt</em>: Jubiläumskonzerte
-			mit Werken von Clara Schumann, Schubert und Beethoven am 1. und 2. März in
-			Frankfurt (<em>Pay as you wish</em>)<br />
+			<em>Das Clara-Schumann-Orchester wird 5 Jahre alt</em>: Jubiläumsgala mit
+			Werken von Bériot, Puccini, Tschaikowsky, Verdi und vielen mehr am 17 Mai
+			in Frankfurt (<em>Pay as you wish</em>)<br />
 			<Button href="/konzerte"> Mehr zu den Konzerten erfahren </Button>
 		</p>
 	</div>
