--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,11 @@
 :root {
-  --logo-height: 15vw;
+	--logo-height: 15vw;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body,
@@ -18,66 +18,66 @@ figure,
 blockquote,
 dl,
 dd {
-  margin: 0;
+	margin: 0;
 }
 
 ul[role="list"],
 ol[role="list"] {
-  list-style: none;
+	list-style: none;
 }
 
 html:focus-within {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 body {
-  min-height: 100vh;
-  text-rendering: optimizeSpeed;
-  max-width: 1920px;
+	min-height: 100vh;
+	text-rendering: optimizeSpeed;
+	/* max-width: 1920px; */
 }
 
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+	text-decoration-skip-ink: auto;
 }
 
 img,
 picture {
-  max-width: 100%;
-  display: block;
+	max-width: 100%;
+	display: block;
 }
 
 input,
 button,
 textarea,
 select {
-  font: inherit;
+	font: inherit;
 }
 
 @media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto;
-  }
+	html:focus-within {
+		scroll-behavior: auto;
+	}
 
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+	*,
+	*::before,
+	*::after {
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
 }
 
 @font-face {
-  font-family: "MadrasExtraLight";
-  src:
-    url("/fonts/MadrasExtraLight.ttf.woff") format("woff"),
-    url("/fonts/MadrasExtraLight.ttf.svg#MadrasExtraLight") format("svg"),
-    url("/fonts/MadrasExtraLight.ttf.eot"),
-    url("/fonts/MadrasExtraLight.ttf.eot?#iefix") format("embedded-opentype");
-  font-weight: normal;
-  font-style: normal;
-  /* font-display: swap; */
+	font-family: "MadrasExtraLight";
+	src:
+		url("/fonts/MadrasExtraLight.ttf.woff") format("woff"),
+		url("/fonts/MadrasExtraLight.ttf.svg#MadrasExtraLight") format("svg"),
+		url("/fonts/MadrasExtraLight.ttf.eot"),
+		url("/fonts/MadrasExtraLight.ttf.eot?#iefix") format("embedded-opentype");
+	font-weight: normal;
+	font-style: normal;
+	/* font-display: swap; */
 }
 
 h1,
@@ -85,18 +85,18 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: "MadrasExtraLight";
-  font-weight: 500;
+	font-family: "MadrasExtraLight";
+	font-weight: 500;
 }
 
 @media screen and (max-width: 1100px) {
-  :root {
-    --logo-height: 20vw;
-  }
+	:root {
+		--logo-height: 20vw;
+	}
 }
 
 @media screen and (max-width: 708px) {
-  :root {
-    --logo-height: 5rem;
-  }
+	:root {
+		--logo-height: 5rem;
+	}
 }
