--- a/src/components/ConcertDetails.astro
+++ b/src/components/ConcertDetails.astro
@@ -1,11 +1,11 @@
 ---
 import ConcertText from "@components/ConcertText.astro";
 
-import  { TypeKonzertFields } from "@lib/types";
+import { KonzertFields } from "@lib/types";
 import ImageAndTextColumns from "./ImageAndTextColumns.astro";
 
 interface Props {
-  konzert: TypeKonzertFields;
+	konzert: KonzertFields;
 	imageSide?: "left" | "right";
 }
 
@@ -13,15 +13,15 @@ const { konzert, imageSide } = Astro.props as Props;
 ---
 
 {
-  konzert.flyer ? (
-    <ImageAndTextColumns
-      src={konzert.flyer.fields.file.url}
-      alt="Konzertflyer des CSO Frankfurt"
-      imageSide={imageSide ? imageSide : "right"}
-    >
-      <ConcertText konzert={konzert} />
-    </ImageAndTextColumns>
-  ) : (
-    <ConcertText konzert={konzert} />
-  )
+	konzert.flyer ? (
+		<ImageAndTextColumns
+			src={konzert.flyer.fields.file.url as string}
+			alt="Konzertflyer des CSO Frankfurt"
+			imageSide={imageSide ? imageSide : "right"}
+		>
+			<ConcertText konzert={konzert} />
+		</ImageAndTextColumns>
+	) : (
+		<ConcertText konzert={konzert} />
+	)
 }
