--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,7 @@ import ImageAndTextColumns from "@components/ImageAndTextColumns.astro";
 <IndexLayout title="CSO">
 	<div class="lead">
 		<p>
-			<em>Das Clara-Schumann-Orchester wird 5 Jahre alt</em>: Jubiläumsgala mit
-			Werken von Bériot, Puccini, Tschaikowsky, Verdi und vielen mehr am 17 Mai
-			in Frankfurt (<em>Pay as you wish</em>)<br />
+			<em>Das Clara-Schumann-Orchester spielt Mahler</em>: Gustav Mahlers fünfte Sinfonie live in Frankfurt erleben! (<em>Pay as you wish</em>)<br />
 			<Button href="/konzerte"> Mehr zu den Konzerten erfahren </Button>
 		</p>
 	</div>
